todo-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: tmp
spec:
  ingressClassName: nginx   # Ingress Controller: nginx
  rules:
  - host: todo.idilsu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
